[package]
authors = ["Will Harris <will.t.harris@protonmail.com>"]
description = "A sample wasm-pack project"
edition = "2018"
name = "hello-wasm"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
